modify image path

--- a/md/selenium/11.md
+++ b/md/selenium/11.md
@@ -1,3 +1,3 @@
 ### selenium ideは...
 おぉ、なんか記録してる
-![selenium-ide](../img/selenium/selenium-ide-rec-fin.png)
+![selenium-ide](img/selenium/selenium-ide-rec-fin.png)
