--- a/md/selenium/12.md
+++ b/md/selenium/12.md
@@ -1,2 +1,2 @@
 ### 再生ボタン押すと...
-![selenium-ide](../img/selenium/selenium-ide-rec-rerun.png)
+![selenium-ide](img/selenium/selenium-ide-rec-rerun.png)
