--- a/md/selenium/21.md
+++ b/md/selenium/21.md
@@ -1,2 +1,2 @@
 ### 再生してみると...
-![selenium-ide](../img/selenium/selenium-ide-assertion-run.png)
+![selenium-ide](img/selenium/selenium-ide-assertion-run.png)
