--- a/md/selenium/35.md
+++ b/md/selenium/35.md
@@ -1,2 +1,2 @@
 「cheeseなんかねぇよ！」ってなってる
-![selenium-web-driver](../../img/selenium/screenshot.png)
+![selenium-web-driver](img/selenium/screenshot.png)
