--- a/md/selenium/45.md
+++ b/md/selenium/45.md
@@ -1,2 +1,2 @@
 ### テスト完了
-![selenium-web-driver](../../img/selenium/selenium-web-driver-assert-result-comp.png)
+![selenium-web-driver](img/selenium/selenium-web-driver-assert-result-comp.png)
