--- a/md/selenium/47.md
+++ b/md/selenium/47.md
@@ -1,2 +1,2 @@
 ### 失敗してる
-![selenium-web-driver](../../img/selenium/selenium-web-driver-assert-failure.png)
+![selenium-web-driver](img/selenium/selenium-web-driver-assert-failure.png)
