--- a/md/selenium/55.md
+++ b/md/selenium/55.md
@@ -1,4 +1,4 @@
 レビューを登録できる
-![spaghetti](../../img/selenium/spaghetti-review-add.png)
+![spaghetti](img/selenium/spaghetti-review-add.png)
 
 ... ってのをテストコードで書くと
