--- a/md/selenium/58.md
+++ b/md/selenium/58.md
@@ -1,4 +1,4 @@
 実はこのサイト、同じ内容のレビューを登録できない  
 登録しようとすると...  
-![spaghetti](../../img/selenium/spaghetti-duplicate.png)  
+![spaghetti](img/selenium/spaghetti-duplicate.png)  
 となる
