--- a/md/selenium/08.md
+++ b/md/selenium/08.md
@@ -1,3 +1,3 @@
 ### ブラウザ操作を記録してみる
 右上の赤丸ボタンを押す  
-![selenium-ide](../img/selenium/selenium-ide-rec.png)
+![selenium-ide](img/selenium/selenium-ide-rec.png)
