--- a/md/selenium/18.md
+++ b/md/selenium/18.md
@@ -1,3 +1,3 @@
 ### Selenium IDE を開く
 再び右上の赤丸ボタンを押す  
-![selenium-ide](../img/selenium/selenium-ide-rec.png)
+![selenium-ide](img/selenium/selenium-ide-rec.png)
