--- a/md/selenium/20.md
+++ b/md/selenium/20.md
@@ -1,3 +1,3 @@
 ### ...するとどうでしょう
 Selenium IDE に変化が  
-![selenium-ide](../img/selenium/selenium-ide-add-assertion.png)
+![selenium-ide](img/selenium/selenium-ide-add-assertion.png)
