--- a/md/selenium/42.md
+++ b/md/selenium/42.md
@@ -1,3 +1,3 @@
 ### ターミナルの表示が変わった！
 ... けどまだ「0 assertions」
-![selenium-web-driver](../../img/selenium/selenium-web-driver-assert-result.png)
+![selenium-web-driver](img/selenium/selenium-web-driver-assert-result.png)
